# fims-site

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .stylelintcache  .stylelintrc.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  components.d.ts  docker-compose.yaml  docker-compose.yml  index.html  package-lock.json  package.json  plugins.ts  req.txt  requirements.txt  stylelint.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1712488532333-37de5601b508a.mjs
.husky/: pre-commit
film/: admin.py  models.py  permissions.py  serializers.py  service.py  services.py  urls.py  views.py
film/migrations/: 0001_initial.py  0002_alter_film_composer_alter_film_director_and_more.py  0002_alter_people_date_of_birth.py  0002_remove_film_year.py  0003_alter_film_genre.py  0003_film_year.py  0004_rename_covet_mini_film_cover_mini.py  0005_remove_film_composer_remove_film_director_and_more.py  0006_comment.py  0007_alter_comment_owner.py  0008_alter_comment_owner.py  0009_alter_comment_owner.py  (+1 more)
migrations/: 20240420162816_genres.down.sql  20240420162816_genres.up.sql  20240420162828_anime.down.sql  20240420162828_anime.up.sql
noname/: .env  asgi.py  settings.py  urls.py  wsgi.py
script/: main.js
sendemail/: models.py  serializers.py  views.py
src/: App.tsx  App.vue  main.rs  main.ts  main.tsx
src/anime/: mod.rs  (+3 more)
stylesheet/: modal.css  reset.css  style.css  swiper.css
user/: admin.py  models.py
userlibrary/: admin.py  apps.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
(+258 files in other folders)
